--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://vanshulv@github.com/Vanshulv/portfolio_site.git"
   },
+  "engines": {
+    "node": ">=16.16.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
